--- a/index.html
+++ b/index.html
@@ -1,105 +1,60 @@
-<!DOCTYPE html>
-<html lang="fa" dir="rtl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>پروژه V2V</title>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; connect-src *;">
-    <meta name="theme-color" content="#121212">
-    <link rel="apple-touch-icon" href="icon-192.png">
-    <link rel="manifest" href="manifest.json">
     <style>
         *, *::before, *::after { box-sizing: border-box; }
         :root {
             --primary-bg: #121212; --secondary-bg: #1e1e1e; --text-color: #e0e0e0;
-            --logo-red: #D32F2F; --logo-green: #388E3C; --border-color: #2e2e2e;
+            --border-color: #333;
             --action-orange: #FFA726; --action-orange-hover: #FFB74D;
-            --action-gray: #333;
-            --ping-good: #4CAF50; --ping-medium: #FFC107; --ping-bad: #F44336;
+            --ping-good: #28a745; --ping-medium: #ffc107; --ping-bad: #dc3545;
+            --ping-untested: #495057;
             --toast-bg: linear-gradient(135deg, #34d399, #10b981);
             --toast-error-bg: linear-gradient(135deg, #f87171, #ef4444);
         }
-        body { background-color: var(--primary-bg); color: var(--text-color); font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; text-align: center; margin: 0; display: flex; flex-direction: column; align-items: center; min-height: 100vh; }
-        .main-wrapper { width: 100%; max-width: 700px; padding: 15px; }
+        body { background-color: var(--primary-bg); color: var(--text-color); font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; text-align: center; margin: 0; }
+        .main-wrapper { width: 100%; max-width: 700px; padding: 15px; margin: 0 auto; }
         .header { margin-bottom: 20px; }
         .header img { width: 100px; height: 100px; }
         .slogan { font-size: 0.9em; color: #aaa; margin-top: 10px; }
         .status-bar { font-size: 0.8em; color: #888; margin-bottom: 20px; min-height: 1em; }
-        .container { width: 100%; background-color: var(--secondary-bg); padding: 20px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); margin-bottom: 20px; }
-        .core-section { margin-bottom: 25px; }
-        .core-section:last-child { margin-bottom: 0; }
-        .core-header { color: white; padding: 15px; border-radius: 10px; font-size: 1.3em; font-weight: bold; margin-bottom: 20px; }
+        .container { background-color: var(--secondary-bg); padding: 10px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); }
+        .core-header { color: white; padding: 15px; border-radius: 10px; font-size: 1.3em; font-weight: bold; margin: 10px; }
         #xray-header { background: linear-gradient(135deg, #c31432, #240b36); }
         #singbox-header { background: linear-gradient(135deg, #159957, #155799); }
-        .test-button { background-color: transparent; color: var(--action-orange); border: 2px solid var(--action-orange); padding: 10px 20px; border-radius: 8px; cursor: pointer; font-weight: bold; font-size: 1em; width: 100%; transition: all 0.2s ease-in-out; display: inline-flex; justify-content: center; align-items: center; gap: 8px; }
+        .test-button { background-color: transparent; color: var(--action-orange); border: 2px solid var(--action-orange); padding: 10px 20px; margin: 10px; border-radius: 8px; cursor: pointer; font-weight: bold; font-size: 1em; width: calc(100% - 20px); transition: all 0.2s; display: inline-flex; justify-content: center; align-items: center; gap: 8px; }
         .test-button:hover:not(:disabled) { background-color: rgba(255, 167, 38, 0.1); color: var(--action-orange-hover); border-color: var(--action-orange-hover); }
         .test-button:disabled { background-color: #2a2a2a; color: #666; border-color: #444; cursor: not-allowed; }
         .loader { width: 16px; height: 16px; border: 2px solid #666; border-bottom-color: transparent; border-radius: 50%; display: inline-block; animation: rotation 1s linear infinite; }
         @keyframes rotation { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
-        .action-group-title { color: #ccc; font-size: 0.9em; font-weight: bold; text-align: right; margin: 15px 0 10px 0; padding-bottom: 5px; border-bottom: 1px solid var(--border-color); }
-        .action-box { display: flex; flex-direction: column; align-items: stretch; gap: 10px; }
-        .action-row { display: flex; justify-content: space-between; align-items: center; background-color: var(--action-gray); padding: 10px 15px; border-radius: 8px; }
-        .action-box-label { font-size: 0.9em; font-weight: 500; }
-        .action-box-buttons { display: flex; gap: 8px; }
-        .action-btn-small { background-color: #444; border: 1px solid #555; color: var(--text-color); padding: 6px 12px; border-radius: 6px; cursor: pointer; font-size: 0.8em; transition: background-color 0.2s; white-space: nowrap;}
-        .action-btn-small:hover { background-color: #555; }
-        .protocol-group { border-top: 1px solid var(--border-color); }
-        .protocol-header { padding: 15px 5px; cursor: pointer; display: flex; justify-content: space-between; align-items: center; font-weight: bold; }
-        .protocol-header-title { display: flex; align-items: center; gap: 10px; }
-        .protocol-header-actions { display: flex; gap: 8px; }
+        .action-group-collapsible { margin: 10px; border-top: 1px solid var(--border-color); }
+        .action-group-collapsible .protocol-header { cursor: pointer; padding: 15px 5px; }
+        .action-group-collapsible .collapsible-content { max-height: 0; overflow: hidden; transition: max-height 0.3s ease-out; }
+        .action-group-collapsible.open .collapsible-content { max-height: 500px; }
+        .action-group-title { color: #ccc; font-size: 0.9em; text-align: right; margin: 15px 0 10px; padding-bottom: 5px; border-bottom: 1px solid var(--border-color); }
+        .action-box { display: flex; flex-direction: column; gap: 10px; }
+        .action-row { display: flex; justify-content: space-between; align-items: center; background-color: #2a2a2a; padding: 10px 15px; border-radius: 8px; }
+        .action-box-label { font-size: 0.9em; }
+        .action-box-buttons, .config-actions, .protocol-header-actions { display: flex; gap: 8px; }
+        .action-btn-small, .copy-btn { background-color: #444; border: 1px solid #555; color: var(--text-color); padding: 6px 12px; border-radius: 6px; cursor: pointer; font-size: 0.8em; transition: background-color 0.2s; white-space: nowrap; }
+        .action-btn-small:hover, .copy-btn:hover { background-color: #555; }
+        .protocol-group { border-top: 1px solid var(--border-color); margin: 0 10px; }
+        .protocol-header { padding: 15px 5px; display: flex; justify-content: space-between; align-items: center; font-weight: bold; }
+        .protocol-header-title { display: flex; align-items: center; gap: 10px; cursor: pointer; }
         .toggle-icon { transition: transform 0.3s; }
-        .protocol-group.open .toggle-icon, .action-group-collapsible.open .toggle-icon { transform: rotate(180deg); }
-        .config-list { list-style: none; padding: 0; margin: 0; max-height: 0; transition: max-height 0.4s ease-in-out; overflow: hidden; }
-        .protocol-group.open .config-list { max-height: 400px; overflow-y: auto; }
+        .protocol-group:not(.open) .toggle-icon, .action-group-collapsible:not(.open) .toggle-icon { transform: rotate(-90deg); }
+        .config-list { list-style: none; padding: 0; margin: 0; max-height: 500px; overflow: hidden; transition: max-height 0.3s ease-out; }
+        .protocol-group:not(.open) .config-list { max-height: 0; }
         .config-item { padding: 10px 5px; border-top: 1px solid var(--border-color); display: flex; align-items: center; gap: 10px; }
-        .config-checkbox { flex-shrink: 0; transform: scale(1.2); accent-color: var(--logo-green); }
+        .config-checkbox { flex-shrink: 0; transform: scale(1.2); }
         .config-details { flex-grow: 1; text-align: right; overflow: hidden; }
         .server { font-size: 0.9em; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; display: block; }
-        .ping-result-container { display: flex; justify-content: flex-end; align-items: center; gap: 6px; font-family: monospace; font-size: 0.85em; min-height: 1.2em; flex-wrap: wrap; }
-        .ping-result-item { padding: 2px 5px; border-radius: 4px; background-color: #333; color: #999; white-space: nowrap; }
-        .config-actions { display: flex; gap: 5px; }
-        .copy-btn { background-color: #3e3e3e; border: 1px solid #555; padding: 5px 10px; border-radius: 5px; cursor: pointer; color: var(--text-color); font-size: 0.85em; }
-        .bottom-links { margin-top: auto; padding-top: 20px; width: 100%; display: flex; gap: 20px; justify-content: center; }
+        .ping-result-container { display: flex; justify-content: flex-end; align-items: center; gap: 8px; font-family: monospace; font-size: 0.85em; min-height: 1.2em; flex-wrap: wrap; margin-top: 5px; }
+        .ping-label { color: #999; font-size: 0.8em; }
+        .ping-result-item { padding: 3px 6px; border-radius: 4px; background-color: var(--ping-untested); color: #ccc; white-space: nowrap; min-width: 45px; text-align: center; }
+        .bottom-links { margin-top: auto; padding: 20px 0; display: flex; gap: 20px; justify-content: center; }
         .bottom-links a { color: #aaa; text-decoration: none; font-size: 0.9em; }
-        .alert { padding: 20px; color: var(--logo-red); }
-        #qr-modal { display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.85); justify-content: center; align-items: center; }
+        .alert { padding: 20px; color: #f87171; }
+        #qr-modal { display: none; position: fixed; z-index: 1000; inset: 0; background-color: rgba(0,0,0,0.85); justify-content: center; align-items: center; }
         .qr-content { background-color: white; padding: 25px; border-radius: 12px; }
-        .toast { visibility: hidden; min-width: 250px; background: var(--toast-bg); color: #fff; text-align: center; border-radius: 8px; padding: 16px; position: fixed; z-index: 2000; left: 50%; transform: translateX(-50%); bottom: 30px; font-size: 17px; transition: visibility 0.5s, opacity 0.5s, bottom 0.5s; opacity: 0; }
+        .toast { visibility: hidden; min-width: 250px; background: var(--toast-bg); color: #fff; text-align: center; border-radius: 8px; padding: 16px; position: fixed; z-index: 2000; left: 50%; transform: translateX(-50%); bottom: 30px; font-size: 17px; transition: all 0.5s; opacity: 0; }
         .toast.show { visibility: visible; opacity: 1; bottom: 50px; }
         .toast.error { background: var(--toast-error-bg); }
-        .action-group-collapsible .collapsible-content { padding: 0; margin: 0; max-height: 0; transition: max-height 0.4s ease-in-out, padding 0.4s ease-in-out; overflow: hidden; }
-        .action-group-collapsible.open .collapsible-content { max-height: 1000px; padding-top: 15px; }
-        .action-group-collapsible .protocol-header { border-top: 1px solid var(--border-color); margin-top: 20px; }
     </style>
-</head>
-<body>
-    <div id="toast"></div>
-    <div class="main-wrapper">
-        <header class="header">
-            <img src="logo.png" alt="V2V Logo">
-            <p class="slogan">سپاس هرآنکه خواه یا ناخواه دستی بر این راهک رهایی داشت</p>
-        </header>
-        <div class="status-bar" id="status-bar"></div>
-        <div class="container">
-            <section id="xray-section" class="core-section">
-                <div class="core-header" id="xray-header">هسته Xray</div>
-                <div id="xray-content-wrapper"><div class="alert">درحال بارگذاری...</div></div>
-            </section>
-            <section id="singbox-section" class="core-section">
-                <div class="core-header" id="singbox-header">هسته Sing-box</div>
-                <div id="singbox-content-wrapper"><div class="alert">درحال بارگذاری...</div></div>
-            </section>
-        </div>
-        <footer class="bottom-links">
-             <a href="https://v2v-vercel.vercel.app/" target="_blank" rel="noopener noreferrer">ورسل</a>
-             <a href="https://v2v-data.s3-website.ir-thr-at1.arvanstorage.ir/" target="_blank" rel="noopener noreferrer">ابر آروان</a>
-             <a href="https://smbcryp.github.io/V2V/" target="_blank" rel="noopener noreferrer">گیت‌هاب</a>
-        </footer>
-    </div>
-    <div id="qr-modal"><div class="qr-content" id="qr-code-container"></div></div>
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-yaml/4.1.0/js-yaml.min.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js" defer></script>
-    <script src="index.js"></script>
-</body>
-</html>
