--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>پروژه V2V</title>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src 'self' https://*.mbrgh87.workers.dev;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src 'self' https://*.mbrgh87.workers.dev https://smbcryp.github.io https://v2v-vercel.vercel.app;">
     <meta name="theme-color" content="#121212">
+    <link rel="icon" href="logo.png" type="image/png">
     <link rel="apple-touch-icon" href="logo.png">
     <link rel="manifest" href="manifest.json">
     <style>
         *, *::before, *::after { box-sizing: border-box; }
         :root {
-            --primary-bg: #121212; --secondary-bg: #1e1e1e; --text-color: #e0e0e0;
-            --logo-red: #D32F2F; --logo-green: #388E3C; --border-color: #2e2e2e;
-            --action-blue: #007bff; --action-blue-hover: #0056b3; --action-gray: #333;
+            --primary-bg: #121212; --secondary-bg: #1e1e1e; --text-color: #e0e0e0; --border-color: #2e2e2e;
+            --action-gray: #333; --test-button-bg: #4a2a00; --test-button-hover-bg: #6e3f00;
             --ping-good: #4CAF50; --ping-medium: #FFC107; --ping-bad: #F44336;
             --toast-bg: linear-gradient(135deg, #34d399, #10b981);
             --toast-error-bg: linear-gradient(135deg, #f87171, #ef4444);
@@ -30,35 +30,31 @@
         .core-header { color: white; padding: 15px; border-radius: 10px; font-size: 1.3em; font-weight: bold; margin-bottom: 20px; }
         #xray-header { background: linear-gradient(135deg, #c31432, #240b36); }
         #singbox-header { background: linear-gradient(135deg, #159957, #155799); }
-        .test-button { background: var(--action-blue); color: white; border: none; padding: 12px 20px; border-radius: 8px; cursor: pointer; font-weight: bold; font-size: 1em; width: 100%; transition: all 0.3s ease; display: inline-flex; justify-content: center; align-items: center; gap: 8px; margin-bottom: 15px; }
-        .test-button:hover { background-color: var(--action-blue-hover); transform: translateY(-2px); }
-        .test-button:disabled { background-color: #555; cursor: not-allowed; transform: none; }
-        .loader { width: 16px; height: 16px; border: 2px solid #fff; border-bottom-color: transparent; border-radius: 50%; display: inline-block; animation: rotation 1s linear infinite; }
-        @keyframes rotation { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+        .test-button { background: var(--test-button-bg); border: 1px solid #7c5115; color: #ffab40; padding: 12px 20px; border-radius: 8px; cursor: pointer; font-weight: bold; font-size: 1em; width: 100%; transition: all 0.3s ease; display: flex; justify-content: center; align-items: center; gap: 8px; margin-bottom: 15px; }
+        .test-button:hover { background-color: var(--test-button-hover-bg); }
+        .test-button:disabled { background-color: #555; cursor: not-allowed; transform: none; color: #aaa; border-color: #666; }
         .action-group-title { color: #ccc; font-size: 0.9em; font-weight: bold; text-align: right; margin: 25px 0 10px 0; padding-bottom: 5px; border-bottom: 1px solid var(--border-color); }
         .action-box { display: flex; justify-content: space-between; align-items: center; background-color: var(--action-gray); padding: 10px 15px; border-radius: 8px; margin-bottom: 10px; }
         .action-box-label { font-size: 0.9em; font-weight: 500; }
         .action-box-buttons { display: flex; gap: 8px; }
         .action-btn-small { background-color: #444; border: 1px solid #555; color: var(--text-color); padding: 6px 12px; border-radius: 6px; cursor: pointer; font-size: 0.8em; transition: background-color 0.2s; white-space: nowrap;}
         .action-btn-small:hover { background-color: #555; }
-        .protocol-group { border-top: 1px solid var(--border-color); }
-        .protocol-header { padding: 15px 5px; cursor: pointer; display: flex; justify-content: space-between; align-items: center; font-weight: bold; }
-        .toggle-icon { transition: transform 0.3s; }
-        .protocol-group.open .toggle-icon { transform: rotate(180deg); }
-        .config-list { list-style: none; padding: 0; margin: 0; max-height: 0; transition: max-height 0.4s ease-in-out; overflow: hidden; }
-        .protocol-group.open .config-list { max-height: 2000px; }
+        .config-list-container { list-style: none; padding: 0; margin: 0; }
         .config-item { padding: 10px 5px; border-top: 1px solid var(--border-color); display: flex; align-items: center; gap: 10px; }
-        .config-checkbox { flex-shrink: 0; transform: scale(1.2); accent-color: var(--logo-green); }
+        .config-checkbox { flex-shrink: 0; transform: scale(1.2); accent-color: var(--ping-good); }
         .config-details { flex-grow: 1; text-align: right; overflow: hidden; }
         .server { font-size: 0.9em; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; display: block; }
-        .ping-result-container { font-size: 0.85em; min-width: 80px; text-align: left; }
+        .protocol-badge { font-size: 0.7em; background-color: #444; padding: 2px 5px; border-radius: 4px; color: #ccc; }
+        .ping-result-container { font-size: 0.85em; min-width: 60px; text-align: left; font-weight: bold; display: flex; align-items: center; justify-content: flex-end; }
         .copy-btn { background-color: #3e3e3e; border: 1px solid #555; padding: 5px 10px; border-radius: 5px; cursor: pointer; color: var(--text-color); font-size: 0.85em; }
-        .bottom-links { margin-top: auto; padding-top: 20px; width: 100%; display: flex; gap: 20px; justify-content: center; }
+        .loader-small { width: 14px; height: 14px; border: 2px solid #ffab40; border-bottom-color: transparent; border-radius: 50%; display: inline-block; animation: rotation 1s linear infinite; vertical-align: middle; }
+        @keyframes rotation { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+        .bottom-links { margin-top: auto; padding: 20px 0 10px 0; width: 100%; display: flex; gap: 20px; justify-content: center; flex-wrap: wrap; }
         .bottom-links a { color: #aaa; text-decoration: none; font-size: 0.9em; }
-        .alert { padding: 20px; color: var(--logo-red); }
-        #qr-modal { display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.85); justify-content: center; align-items: center; }
-        .qr-content { background-color: white; padding: 25px; border-radius: 12px; }
-        .toast { visibility: hidden; min-width: 250px; background: var(--toast-bg); color: #fff; text-align: center; border-radius: 8px; padding: 16px; position: fixed; z-index: 2000; left: 50%; transform: translateX(-50%); bottom: 30px; font-size: 17px; transition: visibility 0.5s, opacity 0.5s, bottom 0.5s; opacity: 0; }
+        .alert { padding: 20px; color: var(--ping-bad); }
+        #qr-modal { display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.85); justify-content: center; align-items: center; cursor: pointer; }
+        .qr-content { background-color: white; padding: 25px; border-radius: 12px; cursor: default; }
+        .toast { visibility: hidden; min-width: 250px; background: var(--toast-bg); color: #fff; text-align: center; border-radius: 8px; padding: 16px; position: fixed; z-index: 2000; left: 50%; transform: translateX(-50%); bottom: 30px; font-size: 17px; transition: all 0.5s; opacity: 0; }
         .toast.show { visibility: visible; opacity: 1; bottom: 50px; }
         .toast.error { background: var(--toast-error-bg); }
     </style>
@@ -83,14 +79,11 @@
         </div>
         <footer class="bottom-links">
              <a href="https://v2v-vercel.vercel.app/" target="_blank" rel="noopener noreferrer">ورسل</a>
-             <a href="https://v2v-data.s3-website.ir-thr-at1.arvanstorage.ir/" target="_blank" rel="noopener noreferrer">ابر آروان</a>
-             <a href="https://smbcryp.github.io/v2v/" target="_blank" rel="noopener noreferrer">گیت‌هاب</a>
+             <a href="https://smbcryp.github.io/v2v-data/" target="_blank" rel="noopener noreferrer">دیتا</a>
+             <a href="https://smbcryp.github.io/v2v/" target="_blank" rel="noopener noreferrer">سایت اصلی (گیت‌هاب)</a>
         </footer>
     </div>
-
     <div id="qr-modal"><div class="qr-content" id="qr-code-container"></div></div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-yaml/4.1.0/js-yaml.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js" defer></script>
     <script src="index.js"></script>
 </body>
